# asciidoc-hs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  asciidoc.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: AsciiDoc.hs
src/AsciiDoc/: AST.hs  Generic.hs  Parse.hs
test/: Main.hs
test/asciidoctor/admonition/: caution-block.test  caution-with-id-and-role.test  caution-with-title.test  caution.test  important-block.test  important-with-id-and-role.test  important-with-title.test  important.test  note-block.test  note-with-id-and-role.test  note-with-title.test  note.test  tip-block.test  tip-with-id-and-role.test  tip-with-title.test  tip.test  warning-block.test  warning-with-id-and-role.test  warning-with-title.test  warning.test
test/asciidoctor/audio/: basic.test  with-all-options.test  with-id-and-role.test  with-title.test
test/asciidoctor/colist/: basic.test  with-id-and-role.test  with-title.test
test/asciidoctor/dlist/: basic-block.test  basic-missing-description.test  basic-with-id-and-role.test  basic-with-title.test  basic.test  horizontal-with-dimensions.test  horizontal-with-id-and-role.test  horizontal-with-title.test  horizontal.test  mixed.test  qanda-block.test  qanda-missing-answer.test  qanda-with-id-and-role.test  qanda-with-title.test  qanda.test
test/asciidoctor/document/: footnotes.test  title-with-author-no-email.test  title-with-author.test  title-with-multiple-authors.test  title-with-revdate.test  title-with-revnumber.test  title-with-revremark.test  title.test  toc-title.test  toc.test
test/asciidoctor/embedded/: footnotes.test  title.test  toc-title.test  toc.test
test/asciidoctor/example/: basic.test  with-id-and-role.test  with-title.test
test/asciidoctor/fenced/: basic.test
test/asciidoctor/floating_title/: level1.test  level2.test  level3.test  level4.test  level5.test  with-custom-id.test  with-roles.test
test/asciidoctor/image/: basic.test  with-align.test  with-alt-text.test  with-dimensions.test  with-float.test  with-id.test  with-link.test  with-roles.test  with-title.test
test/asciidoctor/inline_anchor/: bibref-with-text.test  bibref.test  link-with-role.test  link-with-target-blank.test  link-with-text.test  link.test  ref.test  xref-interdoc.test  xref-reftext.test  xref-resolved-text.test  xref-with-text.test  xref-xrefstyle.test  xref.test
test/asciidoctor/inline_break/: hardbreaks.test  plus-sign.test
test/asciidoctor/inline_button/: basic.test
test/asciidoctor/inline_callout/: basic.test
test/asciidoctor/inline_footnote/: basic.test  xref-unresolved.test  xref.test
test/asciidoctor/inline_image/: icon-no-icons.test  icon-with-dimensions.test  icon-with-float.test  icon-with-link.test  icon-with-role.test  icon-with-title.test  icon.test  image-with-alt-text.test  image-with-dimensions.test  image-with-float.test  image-with-link.test  image-with-role.test  image.test
test/asciidoctor/inline_kbd/: basic.test  keyseq.test
test/asciidoctor/inline_menu/: menu.test  menuitem.test  submenu.test
test/asciidoctor/inline_quoted/: asciimath.test  basic.test  double-with-role.test  double.test  emphasis-with-role.test  emphasis.test  latexmath.test  mark.test  mixed-monospace-bold-italic.test  monospaced-with-role.test  monospaced.test  single-with-role.test  single.test  strong-with-role.test  strong.test  subscript-with-role.test  subscript.test  superscript-with-role.test  superscript.test  with-id.test
test/asciidoctor/listing/: basic-nowrap.test  basic-with-id-and-role.test  basic-with-title.test  basic.test  source-nowrap.test  source-with-language.test  source-with-title.test  source.test
test/asciidoctor/literal/: basic.test  indented.test  labeled.test  nowrap.test  with-id-and-role.test  with-title.test
test/regression/: issue_2.test  issue_3.test  issue_4a.test  issue_4b.test  issue_4c.test  issue_4d.test  issue_4e.test  issue_4f.test  issue_4g.test  issue_4h.test  issue_5.test
(+117 files in other folders)
