cabal-version:      3.4
name:               asciidoc
version:            0.1.0.0
synopsis:           AsciiDoc parser.
description:        A parser for AsciiDoc syntax.
license:            BSD-3-Clause
license-file:       LICENSE
author:             John MacFarlane
maintainer:         jgm@berkeley.edu
copyright:          (C) 2025 by John MacFarlane
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: test/asciidoctor/**/*.test
                    test/feature/**/*.test
                    test/feature/include/**/*.adoc

Source-repository head
  type:              git
  location:          https://github.com/jgm/asciidoc-hs.git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AsciiDoc
                    , AsciiDoc.AST
                    , AsciiDoc.Generic
                    , AsciiDoc.Parse
    build-depends:    base >=4.14 && <5
                    , text
                    , mtl
                    , attoparsec
                    , filepath
                    , containers
                    , tagsoup
                    , aeson
    hs-source-dirs:   src
    default-language: Haskell2010

executable hasciidoc
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.14 && <5,
        asciidoc,
        mtl,
        text,
        pretty-show,
        aeson,
        bytestring,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite asciidoc-hs-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.14 && <5,
        asciidoc,
        tasty,
        tasty-hunit,
        tasty-golden,
        text,
        bytestring,
        pretty-show,
        containers,
        directory,
        filepath,
        process
